--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,22 @@
       <div class="signup-options" id="signup-with-fb">
         <div class="line">
           <div class="size1of2">
-            <!-- TODO(yigit): Replace the image below with facepile on production -->
-            <img src="/stylesheets/images/facepile.png" />
+            <!-- TODO(yigit): Replace the image below with facepile on production
+              <img src="/stylesheets/images/facepile.png" />
+            -->
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) {return;}
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+
+            <div class="fb-like-box" data-href="http://www.facebook.com/benvarim.platformu" data-width="300" data-show-faces="true" data-border-color="#EEE" data-stream="false" data-header="false"></div>
+
+
             <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=116309391796241&amp;xfbml=1"></script><fb:signup-button show-faces="true" width="300" max-rows="2"></fb:signup-button>
           </div>
           <div class="size1of2 lastUnit">
@@ -64,7 +78,7 @@
             </div>
 
             <div class="actions">
-              <%= f.submit "Kayıt Ol", :class=>"button large yellow button-primary" %>
+              <%= f.submit "Kaydol", :class=>"button large yellow button-primary" %>
             </div>
           <% end %>
         </div><!-- signup-form -->
