dont render container in home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,15 @@
 <%= render 'layouts/header'%>
 
 <div id="content" class="clearfix">
-  <div class="container">
-    <%#render :partial => 'layouts/errors'%>
-
+  <% if is_in_home_controller %>
     <%= yield %>
-  </div>
+  <% else %>
+    <div class="container">
+      <%= yield %>
+    </div>
+  <% end %>
+
+
 </div><!-- end of #container -->
 
 
