--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -7,7 +7,7 @@
         <div class="_pm_shadow l"></div>
         <div class="_pm">
           <div class="_pm_inner">
-            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/gercek-karakus.jpeg" width="152" />
+            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/levent-bas.jpeg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="_pm_shadow l"></div>
         <div class="_pm">
           <div class="_pm_inner">
-            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/yigit-boyar.jpg" width="152" />
+            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/yigit-boyar.jpeg" width="152" />
             <div class="img_inner_shadow"></div>
           </div>
         </div>
@@ -50,19 +50,16 @@
       <div class="p-title">Teknoloji Direktörü</div>
       <p>Benvarim.com projesinin teknik liderliğini yürüten Yiğit Boyar, ABD Silikon Vadisi'nde başarılı bir sosyal ağ startupında çalışmakta ve bu alanda 5 yılı aşkın bir tecrübeye sahip. Lise eğitimini Ankara Fen Lisesi'nde tamamlayan Yiğit, bu süreçte bilgisayar biliminde ciddi çalışmalar yapmış, ulusal ve uluslararası alanlarda çeşitli ödüller kazanmıştır. ODTÜ Bilgisayar Mühendisliği'ne başladıktan sonra web teknolojilerine yoğunlaşan Yiğit, ODTÜ Bilgisayar Topluluğu bünyesinde bir çok seminer vermiştir. 2006-2008 yılları arasında ODTÜ Verimlilik Topluluğu'nun yonetim kurulunda yer alan Yiğit, STK'ların problemlerinin tesbit ve çözümune odaklı, ulusal bir vaka analizi yarismasi olan Çözum Sende (cozumsende.org)'nin yaratıcılarından.</p>
       <div class="p-other">
-        <a href="http://www.linkedin.com/profile/view?id=31586905" target="_blank" title="LinkedIn profilini görüntüle">
+        <a href="http://www.linkedin.com/in/yigitboyar" target="_blank" title="LinkedIn profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/linkedin.png" />
         </a>
-        <a href="http://twitter.com/gercheq" target="_blank" title="Twitter profilini görüntüle">
+        <a href="http://twitter.com/yigitboyar" target="_blank" title="Twitter profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/twitter.png" />
         </a>
-        <a href="http://www.facebook.com/gercek.karakus" target="_blank" title="Facebook profilini görüntüle">
+        <a href="http://www.facebook.com/yigit.boyar" target="_blank" title="Facebook profilini görüntüle">
           <img src="/images/social_media_mini_icons/png/facebook.png" />
         </a>
-        <a href="http://friendfeed.com/gercheq" target="_blank" title="Friendfeed profilini görüntüle">
-          <img src="/images/social_media_mini_icons/png/friendfeed.png" />
-        </a>
-        <a href="mailto:gercek@benvarim.com" title="E-posta gönder">
+        <a href="mailto:yigit@benvarim.com" title="E-posta gönder">
           <img src="/images/social_media_mini_icons/png/email.png" />
         </a>
       </div>
