--- a/app/views/home/nedir.html.erb
+++ b/app/views/home/nedir.html.erb
@@ -3,7 +3,7 @@
     <div class="line clearfix">
       <div class="size1of2 pf-video">
         <div class="pfv-inner">
-
+          <iframe src="http://player.vimeo.com/video/29056779?title=0&amp;byline=0&amp;portrait=0" width="100%" height="100%" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
         </div>
       </div>
       <div class="size1of2 lastUnit pf-desc">
@@ -20,7 +20,7 @@
             <%=link_to "Nasıl Çalışır?", :nasil_calisir, :class => "rc-top #{print_if_selected_tab :home, :nasil_calisir}", :id => "nav-nasil"%> | <%=link_to "Sık Sorulan Sorular", :sik_sorulan_sorular %>
           </div>
           <div class="pf-cta">
-            <%=link_to "Bağış sayfası yarat", :new_page, :class => "button yellow large"%>
+            <%=link_to "Gönüllü ol, bağış sayfanı yarat", :new_page, :class => "button yellow large"%>
           </div>
         </div>
       </div>
