--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -144,7 +144,7 @@
               <li><%=link_to "İletişim", :new_contact_form %></li>
               <li>Blog</li>
               <li>Basın Bültenleri</li>
-              <li>Yeni Kurum Kaydı</li>
+              <li><a href="#" class="">Yeni Kurum Kaydı</a></li>
             </ul>
           </div>
         </div>
