--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <%= render 'layouts/header'%>
 
 <div id="content" class="clearfix">
-  <% if is_in_home_controller %>
+  <% if is_in_homepage %>
     <%= yield %>
   <% else %>
     <div class="container">
