render at the end functionality

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -64,5 +64,8 @@ g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.googl
 s.parentNode.insertBefore(g, s);
 })(document, 'script');
 </script>
+
+<%=raw get_buffered_output%>
+
 </body>
 </html>
