--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -30,7 +30,7 @@ $(document).ready(function(){
     $("#search_form").bvSearchAutocomplete({
       renderer : $("#search_renderer"),
       format : function(item) {
-        return $.tmpl("<li>${human_readable_name}<a href='/ara/d/${docid}'>${human_readable_name}</a></li>", item);
+        return $.tmpl("<p><a href='/ara/d/${docid}'><img src='${logo}'> ${human_readable_name}</a><br/>${description}</p><hr/>", item);
       },
       facetRenderer : $("#facet_renderer"),
       facetFormat : function(facet) {
