fixing jammit, autocomplete conflicts

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -43,7 +43,9 @@ Bv.Config = {
 
 
 <!-- scripts concatenated and minified via ant build script-->
+<script type="text/javascript" src="/javascripts/jquery-ui.min.js"></script>
 <%= include_javascripts :workspace %>
+
 <!-- end concatenated and minified scripts-->
 
 
