move header-footer from emails

--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -1,12 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html lang="en">
-  <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <title>
-      Benvarım.com'a Hoşgeldin!
-    </title>
-  </head>
-  <body>
+<%=render :partial => "email_layouts/header",
+  :locals => {
+    :title => "Benvarım.com'a Hoşgeldin!"
+  }%>
 
 Merhaba <%=@user.name%>,<br/>
 
@@ -29,11 +24,4 @@ Fikir ve önerilerine çok önem veriyoruz. Seninle iletişimde olmak bizi motiv
 Görüşmek üzere,<br/>
 Proje Direktörü<br/>
 Levent Baş<br/>
-
-<ul>
-  <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
-  <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebok</a></li>
-  <li>Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></li>
-</ul>
-</body>
-</html>
+<%=render :partial => "email_layouts/footer" %>
