--- a/app/views/organization_mailer/dailymail.text.erb
+++ b/app/views/organization_mailer/dailymail.text.erb
@@ -1,3 +1,4 @@
+<%=render :partial => "email_layouts/header" %>
 Merhaba <%=@organization.user.name%>,
 
 Gün içerisinde <a href="<%=organization_path(@organization, :only_path => false)%>"><%=@organization.name%></a> isimli kurumunuzda açılmış olan bağış sayfalarını aşağıda görebilirsiniz.
@@ -10,9 +11,4 @@ Sayfayı açan kullanıcı    : <%=page.user.name%>
 Sayfanın bağış hedefi     : <%=page.goal%> TL
 
 <% end %>
-
-
-
-Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
-Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">BenVarim Facebook
-Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com
+<%=render :partial => "email_layouts/footer" %>
