--- a/app/views/email_layouts/_footer.html.erb
+++ b/app/views/email_layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <br/>
 <ul>
   <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
-  <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebok</a></li>
+  <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebook</a></li>
   <li>Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></li>
 </ul>
 </body>
