project top pages

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -66,7 +66,7 @@
       <%=render :partial => "pages/list_pages_condensed",
         :locals => {
           :title => "En çok bağış toplayanlar",
-          :pages => @project.pages
+          :pages => @top_pages
         }%>
 
     <% end %>
